@@ -1,3 +1,9 @@
+1998-10-18  Yo Ric Dude  <ricdude@ix.netcom.com>
+
+	* esd-server.h, esd.c, esddsp.c, players.c: how did monitoring
+	ever work like that? corrected the header, actually passed in the
+	length of the monitor buffer.
+
 1998-10-17  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* configure.in (nanosleep): Make this work on Solaris.
